sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
var swapped = true
	while (swapped){
		swapped = false
		for (i<-0 to getNombreValeurs-2){
			for (j<-0 to n){
			if (!plusPetit(j,j+1)){
				echange(j,j+1)
				swapped=true
			}
		}
	}
	}
}
